URL address comment in setting page

--- a/octoprint_psucontrol_jeedom/templates/psucontrol_jeedom_settings.jinja2
+++ b/octoprint_psucontrol_jeedom/templates/psucontrol_jeedom_settings.jinja2
@@ -13,7 +13,7 @@
         <label class="control-label">Address</label>
         <div class="controls">
             <input type="text" class="input" data-bind="value: settings.plugins.psucontrol_jeedom.address">
-            <span class="help-block">The IP address or hostname of your Jeedom server. e.g. http://ip:port or http://hostname:port. Do not include a trailing slash /</span>
+            <span class="help-block">The IP address, hostname or URL of your Jeedom server. e.g. http://ip:port, http://hostname:port or https://octo.domain.ext. Do not include a trailing slash /</span>
         </div>
     </div>
     <div class="control-group">
